hphp/hack/test/typecheck/references/refs_in_array/element_assign2.php.exp
File "element_assign2.php", line 5, characters 9-9:
An expression is expected here. (Parsing[1002])
